# CoMLOpsRosbagMetadata

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CLAUDE.md  README.md  SCHEMA.md  pyproject.toml  rosdep.yaml
.github/workflows/: pre-commit.yaml  test.yaml
src/co_mlops_rosbag_metadata/: CMakeLists.txt  package.xml
src/co_mlops_rosbag_metadata/co_mlops_rosbag_metadata/: __init__.py  co_mlops_metadata_publisher_node.py
src/co_mlops_rosbag_metadata/include/co_mlops_rosbag_metadata/: co_mlops_rosbag_metadata_publisher_node.hpp
src/co_mlops_rosbag_metadata/launch/: co_mlops_rosbag_metadata_publisher.launch.xml
src/co_mlops_rosbag_metadata/src/: co_mlops_rosbag_metadata_publisher_node.cpp
src/co_mlops_rosbag_metadata/test/: test_invalid_yaml_exit_code.py  test_metadata_publisher_node.py  test_metadata_publisher_node_invalid_yaml.py
src/co_mlops_rosbag_metadata/test/fixtures/: invalid_metadata.yaml  sample_metadata.yaml
