[tool.poetry]
name = "comlops-rosbag-metadata"
version = "0.1.0"
description = "Python-only dependencies for CoMLOpsRosbagMetadata (ROS deps are in package.xml + rosdep)"
readme = "README.md"
authors = ["TIER IV, Inc."]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.8"
lark = "^1.0"
# ROS test deps (rclpy, launch_testing, etc.) stay in package.xml.
# lark is required so pytest can load the launch_testing plugin when ROS is on PYTHONPATH.

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["co_mlops_rosbag_metadata"]
split-on-trailing-comma = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
